fixed the source z-index of an hr at contact page

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -107,3 +107,7 @@ button .accordion-button .collapse{
 .text-white{
     width: 100%;
 }
+
+hr{
+    z-index: -1;
+}
